Refactored ItemList code for easier readability, re-arranged Components to add Shopping Car Page Comp, fixed minor styling issues with header and scrolling when user query

--- a/src/components/Header/ShoppingCartIcon/ShoppingCartIcon.css
+++ b/src/components/Header/ShoppingCartIcon/ShoppingCartIcon.css
@@ -1,4 +1,4 @@
-.shopping-cart-container {
+.shopping-cart-icon-container {
   position: absolute;
   right: 0px;
 }
@@ -20,7 +20,7 @@
   pointer-events: none;
 }
 
-.shopping-cart-container .cart-icon {
+.shopping-cart-icon-container .cart-icon {
   height: 120px;
   margin: 50px 40px 70px;
   transition: opacity 0.2s ease;
