--- a/src/components/ItemList/ItemList.css
+++ b/src/components/ItemList/ItemList.css
@@ -1,8 +1,27 @@
+.big-div-boy {
+  margin-top: 300px;
+}
+
+.list-title {
+  font-size: 3rem;
+  font-weight: bold;
+  font-style: italic;
+  color: #ffffff;
+  text-align: center;
+  margin-bottom: 20px;
+  letter-spacing: 2px;
+  background: linear-gradient(
+    to right,
+    rgba(167, 167, 167, 0.8),
+    rgba(0, 0, 0, 0.4)
+  );
+  width: 400px;
+}
+
 .item-list-container {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   gap: 20px;
   padding: 20px;
-  margin-top: 340px;
   min-height: 600px;
 }
